tests/paczka1/fuzzy1/46533424.err
Error in line 6: WnoIP A735 89,2
Error in line 4: vydzlHhTo S597 37,5
Error in line 5: uKET3cRYxV A735 265,9
Error in line 31: I6k A735 79,9
